[build-system]
requires = ["setuptools>=68", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "dnd-beyond-desktop"
version = "0.1.0"
description = "Lightweight desktop companion for D&D Beyond character sheets and resources"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
scraping = ["playwright>=1.46"]

[project.scripts]
dndbeyond-desktop = "dnd_beyond_desktop.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
